feat: properly decode gzip responses